2004-05-29  Dodji Seketeli  <dodji@gnome.org>

	* tests/test-functional-notation.sh,tests/test-inputs/functional-notation.css,
	tests/test-output-refs/test-functional-notation.out:
	Added regression tests for #143308
	
	* src/cr-parser.c:
	(cr_parser_parse_term): better handling unary operator.
	* src/cr-stylesheet.c :
	(cr_stylesheet_dump): fprintf (fd, str) ; doesn't behave
	correctly when str contains a '%' char. Do fprintf (fd, "%", str)
	instead ;
	* src/cr-term.c: 
	(cr_term_to_string): use g_string_append() instead of 
	g_string_append_printf() when possible.
	Don't forget to close function parenthesis even when argument
	list is NULL.
	* src/cr-tknzr.c:
	(cr_tknzr_parse_ident):
	Properly roll back the input stream when an error occurs.
	This ChangeLog entry fixes
	http://bugzilla.gnome.org/show_bug.cgi?id=143308.

2004-04-18  Dodji Seketeli  <dodji@gnome.org>

================== 0.5.1 release ========================

	* tests/Makefile.am: added test-several-media.sh to archive.

	* configure.in: bumped the version info 3.0.1 
	and version number to 0.5.1
	
2004-04-17  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-parser.c: 
	(cr_parser_parse_stylesheet):
	Correctly detect @import run parsing errors.
	This fixes http://bugzilla.gnome.org/show_bug.cgi?id=140334 .
	
	* src/cr-parser.c: 
	(cr_parser_parse_simple_selector):
	correctly detect when class additional selector parsing
	fails.
	(cr_parser_parse_simple_sels):
	Make sure a pointer is not null before derefencing it.
	append a simple sel to the list of simple sels only if 
	the simple sel is not NULL.
	This entry fixes http://bugzilla.gnome.org/show_bug.cgi?id=140317
	.	

	* src/cr-statement.[ch]:
	(cr_statement_list_to_string):
	added this to "to_string" a list of statements.
	(cr_statement_media_rule_to_string): dump the 
	*list of statements* contained in the media rule, and
	not only the first one.
	This entry fixes http://bugzilla.gnome.org/show_bug.cgi?id=139891 .